Added gdt alias which launches 'git difftool'. launches vimdiff externally to view inline comparison.
gd will now show changed in the terminal.

gd allows for checking quickly in terminal wihout having to load in
mvim

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -22,5 +22,10 @@
 	required = true
 [difftool "vimdiff"]
 	cmd = mvimdiff -f -d \"$LOCAL\" \"$REMOTE\"
+  external = ~/code/git-diff-wrapper.sh
 [diff]
-    external = ~/code/git-diff-wrapper.sh
+    tool = vimdiff
+[gui]
+	recentrepo = /Users/j_honky/go/src/github.com/mattermost/mattermost-plugin-demo
+[difftool]
+	prompt = false
