TSX files finally linting with coc.vim. need to use typescriptreact and javascriptreact

--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -1,15 +1,9 @@
 {
-  //"extends": "eslint:recommended",
-//  "eslint.quite": true,
-  "eslint.options": {
-    "configFile": "/Users/jfrerich/.eslintrc.json"
-  },
   "eslint.autoFixOnSave": true,
+  "eslint.filetypes": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
 
   "jest.watch": true,
   "jest.watchman": true,
-
-//  "rules": { "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], },
 
   "languageserver": {
     "golang": {
