--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -1,10 +1,10 @@
 {
+  "diagnostic.checkCurrentLine": true,
+  "snippets.userSnippetsDirectory": "/Users/jfrerich/.vim/mysnippets",
   "eslint.autoFixOnSave": true,
   "eslint.filetypes": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-
   "jest.watch": true,
   "jest.watchman": true,
-
   "languageserver": {
     "golang": {
       "command": "gopls",
