Start using coc.vim for autocompletion, and signature help. Trying to use LSPs instead of vim-go vim plugin

--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -1,5 +1,13 @@
 {
+  "coc.preferences.currentFunctionSymbolAutoUpdate": true,
+  "coc.preferences.hoverTarget": "float",
+
   "diagnostic.checkCurrentLine": true,
+
+  "signature.enable": true,
+  "signature.target": "float",
+  "signature.triggerSignatureWait": 300,
+
   "snippets.userSnippetsDirectory": "/Users/jfrerich/.vim/mysnippets",
   "eslint.autoFixOnSave": true,
   "eslint.filetypes": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
