moved from vundlevim to vim-plug Really easy, but needed for coc.vim (not supported for vundle)

--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -21,7 +21,7 @@
     "echodocSupport": true,
     "floatEnable": true,
   },
-
+  "cSpell.enabled": false,
   "diagnostic.checkCurrentLine": true,
   "diagnostic.messageTarget": "float",
 
