add stylelint server and fix on save. this handles css files

--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -37,6 +37,7 @@
     "typescriptreact": ["typescript"]
   },
   "eslint.autoFixOnSave": true,
+  "stylelintplus.autoFixOnSave": true,
   "jest.watch": true,
   "jest.watchman": true,
   "languageserver": {
