--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,6 +7,8 @@ set -as terminal-overrides ',xterm*:sitm=\E[3m'
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g mouse on
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/vim-tmux-sensible'
