--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-shell /usr/bin/zsh
 
 set -g escape-time 0
+set -g status-left-length 20
 
 set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal ',tmux-256color'
