add a couple of plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 set -g default-shell /usr/bin/zsh
 
+set -g bell-action none
 set -g escape-time 0
 set -g status-left-length 20
 
@@ -17,7 +18,13 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/vim-tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# set -g @plugin 'catppuccin/tmux'
-# set -g @catppuccin_flavour 'latte'
+# plugins to try
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_flavour 'frappe'
+set -g @catppuccin_date_time_text "%Y-%m-%d %I:%M:%S"
 
 run '~/.tmux/plugins/tpm/tpm'
